time set to utc
